1.0.0 - 12/31/2012
- Initial release.

1.1.0 - 03/02/2013
- Fix bug where a user is not banned for profanity when number of users is two.
- Fix bug where target voteban user can change nickname to avoid being banned.
- Add channel flood protection.
- Add rejoin command.
- Add who command.
- Now handles case mapping properly when dealing with the server.
- Add CTCP ping support.
- Fix bug where Connect() fails (e.g. due to DNS) and OnConnectTimer() is not rescheduled.

1.2.0 - 12/29/2013
- Fix support for compiling without PCRE enabled.
- Output bot version to log file on startup.
- Add seen and lastseen commands.
- Can now run as a daemon on Unix-like systems.
- Add project URL to version string.
- Add signal handling for graceful exiting.
- 'shutdown' command now kills all bots.
- ircbnx now runs as a proper Win32 application on Windows.
- Add tray icon on Windows to exit ircbnx.

1.3.0 - ??/??/????
- The bot will now only respond when its nickname is used as an individual word.
